one page checkout fix for safari, regression tested on firefox and chrome

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -144,7 +144,6 @@
   input:disabled,
   md-input-container .md-input[disabled],
   select:disabled { color: rgba(0,0,0,0.38); background-color: #fafafa !important; }
-  input:read-only,
   input:disabled,
   md-input-container .md-input[disabled],
   select:disabled { color: rgba(0,0,0,0.38); background-color: #fafafa !important; }
